# fsm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  app.py  config.yml  coverage  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  release.yml
background/: background.py
manager/: __init__.py
src/manager/: __init__.py
src/manager/static/css/: manager.css
src/manager/templates/: base.html
src/manager/templates/index/: index.html
src/manager/templates/service/: index.html
src/manager/views/: index.py  services.py
static/css/: manager.css
templates/: base.html  loadavg.html  menu.html  views
tests/: conftest.py
tests/functional/: test_welcome.py
tests/functional/features/: functional.feature
views/: index.py  map.py
views/templates/: all_links.html  index.html
