[build-system]
requires = ["setuptools >= 77.0.3","setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "manager"
dynamic = ["version"]

dependencies = [
    "Flask==3.0.3",
    "psutil==7.0.0",
]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"]  
exclude = [ "bin" ]
